--- a/mixin/scss/main.scss
+++ b/mixin/scss/main.scss
@@ -1,56 +1,10 @@
-// Mixin
-// Simple Mixin
+// @import "modules/mixin";
+// @import "modules/header";
+// @import "modules/container";
+// @import "modules/footer";
 
-@mixin inline-list {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  li {
-    display: inline-block;
-  }
-}
+// @import "modules/mixin", "modules/header", "modules/container", "modules/footer";
 
-.header ul {
-  @include inline-list();
-  li {
-    background-color: black;
-    padding: 0.5em;
-    a {
-      color: white;
-    }
-  }
-}
-
-.footer ul {
-  @include inline-list();
-  li {
-    padding: 0.4em;
-    background-color: salmon;
-  }
-  a {
-    color: white;
-    text-decoration: none;
-  }
-}
-
-// Arguments pada mixin
-
-@mixin flex-box($direction: row, $space: center) {
-  display: flex;
-  justify-content: $space;
-  align-items: center;
-  flex-direction: $direction;
-}
-.container {
-  @include flex-box(row-reverse, space-around);
-  width: 600px;
-  height: 400px;
-  background-color: #eaeaea;
-  .box {
-    width: 60px;
-    height: 60px;
-    background-color: greenyellow;
-    text-align: center;
-    line-height: 60px;
-  }
-}
+@use "modules/header";
+@use "modules/container";
+@use "modules/footer";
